--- a/index.html
+++ b/index.html
@@ -4,35 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clicker</title>
-    <link rel="stylesheet" href="client/css/index.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
 
     <div>
-        <span id="score">0</span><span>$</span>
+        <span>Your score:</span> <span style="color: #41B883;" id="score">0</span><span> $</span>
     </div>
 
     <br>
 
-    <button id="click-general">Click</button>
-    <button id="click-fabric">Get fabric</button>
-    <button id="click-construction">Get construction</button>
+    <button class="earn-button" id="earn">Earn Money $</button>
 
+    <br><br><br>
+
+    <hr>
     <br>
+    <div class="building-buttons">
+        <button class="building-button" id="click-level-one">
+            <img class="building-icon" src="icons/level_1.svg" alt="Level 1">
+            <p>Level 1</p>
+            <span>20$ (1$ / sec)</span>
+        </button>
+        <button class="building-button" id="click-level-two">
+            <img class="building-icon" src="icons/level_2.svg" alt="Level 2">
+            <p>Level 2</p>
+            <span>250$ (2$ / sec) </span>
+        </button>
+        <button class="building-button" id="click-level-three">
+            <img class="building-icon" src="icons/level_3.svg" alt="Level 3">
+            <p>Level 3</p>
+            <span>1.000$ (4$ / sec)</span>
+        </button>
+        <button class="building-button" id="click-level-four">
+            <img class="building-icon" src="icons/level_4.svg" alt="Level 4">
+            <p>Level 4</p>
+            <span>5.000$ (10$ / sec)</span>
+        </button>
+        <button class="building-button" id="click-level-five">
+            <img class="building-icon" src="icons/level_5.svg" alt="Level 5">
+            <p>Level 5</p>
+            <span>50.000$ (20$ / sec)</span>
+        </button>
+    </div>
+    <br>
+    <hr>
+
+    <br><br><br>
 
     <div id="output">
-        <p>Amount of fabrics: <span id="fab-val">0</span></p>
-        <p>Amount of construction: <span id="con-val">0</span></p>
+        <p>Level 1 Buildings: <span style="color: #41B883;" id="level-one-output">0</span></p>
+        <p>Level 2 Buildings: <span style="color: #41B883;" id="level-two-output">0</span></p>
+        <p>Level 3 Buildings: <span style="color: #41B883;" id="level-three-output">0</span></p>
+        <p>Level 4 Buildings: <span style="color: #41B883;" id="level-four-output">0</span></p>
+        <p>Level 5 Buildings: <span style="color: #41B883;" id="level-five-output">0</span></p>
     </div>
 
     <br>
     <br>
-    <br>
-
-    <footer>
-        <em>Use console to see / get information...</em>
-    </footer>
     
+    <footer>
+        <p id="info">
+            &nbsp;
+        </p>
+    </footer>
+
     <script src="js/app.js"></script>
 </body>
 </html>
