Add simple localstorage cash save

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
 
     <div>
-        <span>Your score:</span> <span style="color: #41B883;" id="score">0</span><span> $</span>
+        <span>Your score:</span>
+            <span style="color: #41B883;" id="score"></span><span> $
+        </span>
     </div>
 
     <br>
 
     <button class="earn-button" id="earn">Earn Money $</button>
+
+    <button id="save">SAVE PROGRESS</button>
 
     <br><br><br>
 
